--- a/parallels/css/main.css
+++ b/parallels/css/main.css
@@ -30,7 +30,7 @@ body {
 }
 
 .logo {
-    text-align: center;
+    text-align: left;
 }
 
 .main-menu {
@@ -56,7 +56,7 @@ body {
 
 .item > img {
     width: 100%;
-    height: 100%;
+
 }
 
 .services {
