--- a/parallels/css/main.css
+++ b/parallels/css/main.css
@@ -75,7 +75,7 @@ body {
 }
 
 .srv {
-    width: 215px;
+
     display: inline-block;
     text-align: center;
     padding: 15px;
@@ -101,7 +101,7 @@ body {
     display: inline-block;
     background-color: #313338;
     padding: 10px;
-    width: 103px;
+
     color: #f5f5f5;
     margin-top: 20px;
     text-decoration: none;
@@ -115,8 +115,8 @@ body {
 }
 
 .gallery img {
-    width: 233px;
-    height: 233px;
+    width: 223px;
+    height: 223px;
     padding: 5px;
 }
 
@@ -132,7 +132,7 @@ body {
     color: #f5f5f5;
     background-color:#313338;
     display: inline-block;
-    width: 280px;
+    padding: 0 35px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
@@ -184,7 +184,7 @@ body {
 
 
 .fourColumn {
-   margin: 5px;
+
     margin-top: 70px;
 }
 
@@ -368,5 +368,9 @@ a {
 
 .footer {
 padding: 20px;
+    margin: 0;
+}
+
+.row {
     margin: 0;
 }
