--- a/whappbook/css/main.css
+++ b/whappbook/css/main.css
@@ -14,16 +14,15 @@
 }
 
 body {
-    max-width: 1280px ! important;
-    text-align: center ! important;
-    margin: auto ! important;
-    font-family: "Calibre-reg" ! important;
-    letter-spacing: 0.5;
     background-color: #E7E6E5 !important;
+    margin: auto ! important;
+    width: 1280px ! important;
+    text-align: center ! important;
+    font-family: "Calibre-reg" ! important;
+
 }
 
 .row {
-    max-width: 1280px !important;
     margin: 0 ! important;
 }
 .every_img {
@@ -287,14 +286,32 @@ h5 {
     font-size: 18px;
 }
 
-@media (min-width  : 1100px) {
+.social {
+    text-align: center;
+}
+
+.form-control {
+    margin-top: 10px! important;
+}
+
+.small-control {
+    padding: 0!important;
+}
+
+
+
+
+
+
+
+
+@media (min-width  : 650px) {
     .about2mob , .pricing_mob {
         display: none !important;
         visibility: hidden !important;
     }
 }
-@media (max-width : 640px) {
-
+@media (max-width : 650px) {
 
     .book_img {
         padding-top: 16%;
@@ -374,6 +391,10 @@ h5 {
         padding-top: 0!important;
         padding-bottom: 14%;
     }
+
+    .about2mob .description {
+        padding: 0!important;
+    }
     .fun_facts .description{
        padding-top: 0;
     }
@@ -447,7 +468,6 @@ h5 {
 
     .bttn {
         font-size: 32px;
-        padding: 1.1em 5em;
     }
 
     .button {
@@ -467,7 +487,7 @@ h5 {
         font-size: 30px;
     }
 
-    .social li img {
+    .social img {
         width: 150%;
         padding: 15%;
 
